# Py-project-with-Poetry---Hatim-ALOUANE

./: .coverage  README.md  pyproject.toml
src/realpoetry/: Acceptable_password.py  Backward_string.py  End_Zeros.py  First_word.py  Number_length.py  The_most_frequent.py  mult_two.py
