[tool.poetry]
name = "realpoetry"
version = "0.1.0"
description = ""
authors = ["user <hatim2000_we@hotmail.com>"]
readme = "README.md"
packages = [{include = "realpoetry", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
